# yt-blender-bevy-gltf-extras-custom-properties

./: Cargo.toml  README.md  readme.avif
art/: everything.blend
assets/: everything.glb
src/: main.rs
