[package]
name = "yt-blender-bevy-gltf-extras-custom-properties"
version = "0.1.0"
edition = "2021"

[dependencies]
avian3d = "0.2.0"
bevy = "0.15.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
